src/k8s/platform/observability/otel-collector/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otelcol-ingress
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: otelcol-collector
      app.kubernetes.io/component: opentelemetry-collector
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector: {}
      ports:
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
